# darkpoint

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml
dev/: bos.config.json  bos.orderbook.json  install-local.sh
dev/unix/: git-add-all.sh  install-local.sh  install-public.sh  setup.sh
docs/: .readthedocs.yaml  changelog.md  conf.py  index.rst  playground.ipynb
examples/: _10_multiple_context_change.py  _11_supreme_hooking.py  _12_filters.py  _1_quick_hooking.py  _2_hooking_path.py  _3_printing.py  _4_print_hooks.py  _5_for_loop_with_hooking_path.py  _6_hook_existing_points.py  _7_absolute_path_traversal.py  _8_chaining.py  _9_context_change.py  _helpers.py  example.py  main.py
src/darkpoint/: Point.py  __init__.py  example.py  helpers.py  main.py  point_declaration.py
src/darkpoint/definitions/: __init__.py  context_define.py  handler_define.py  hook_define.py  point_define.py  scope_define.py
src/darkpoint/structures/: context.py  diverse_link.py  forge_set.py  group.py  hook.py  information.py  mindset.py  point.py  rafined_recap.py  value.py  viewstyle.py
src/darkpoint/structures/diverse/: __init__.py
