[project]
authors = [
  {name = "Sett Sarverott", email = "sett@sarverott.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Natural Language :: Polish",
  "Development Status :: 1 - Planning",
  "Environment :: Plugins",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Religion",
  "Programming Language :: Python :: Implementation",
  "Programming Language :: Python",
  "Topic :: Adaptive Technologies",
  "Topic :: Artistic Software",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Education",
  "Topic :: Religion",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Sociology",
  "Topic :: Sociology :: History",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: System :: Clustering",
  "Topic :: System :: Emulators",
  "Topic :: System :: Filesystems",
  "Topic :: System :: Networking",
  "Topic :: System :: Operating System",
  "Topic :: System :: Software Distribution",
]
description = "This Python framework is technomantic mnemonic toolkit of thought model system with singular principles that allows to create memory palace with start placing in darkness."
keywords = ["dark", "darkness", "memory"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Sett Sarverott", email = "sett@sarverott.com"},
]
name = "darkpoint"
readme = "README.md"
version = "0.2.0"

[project.urls]
Homepage = "https://github.com/sarverott/darkpoint"
Issues = "https://github.com/sarverott/darkpoint/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 40.9.0",
]

[tool.poetry]
name = "darkpoint"
version = "0.1.0"
description = "ghost inside setternet"
authors = ["Sett Sarverott <sarverott@gmail.com>"]
readme = "README.md"

[tool.setuptools.packages.find]
exclude = ['examples*', 'dev*', 'build*', 'tests*', '.github*']
include = ['src*']

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.2.2"
pyyaml = "^6.0.2"
